--- a/examples/fall_2018/week_14/Python_method_types.ipynb
+++ b/examples/fall_2018/week_14/Python_method_types.ipynb
@@ -1,17 +1,28 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python method types: their uses and contruction\n",
+    "## Python method types\n",
     "\n",
-    "Arthur Goldberg, ..."
+    "\n",
+    "**[Arthur Goldberg](https://www.mountsinai.org/profiles/arthur-p-goldberg)**\n",
+    "\n",
+    "This notebook was created for the [Biomedical Software Engineering](https://learn.mssm.edu/webapps/blackboard/content/listContentEditable.jsp?content_id=_448512_1&course_id=_5776_1 \"Biomedical Software Engineering Blackboard site\") course at the [Mount Sinai School of Medicine](https://icahn.mssm.edu/).\n",
+    "\n",
+    "Python supports three object method types. \n",
+    "1. normal methods\n",
+    "2. class methods\n",
+    "3. static methods\n",
+    "\n",
+    "This notebook illustrates how they are used and constructed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +49,16 @@
     "        self.value = value\n",
     "        Example.num_instances_created += 1\n",
     "\n",
-    "    # a normal method\n",
+    "    # a normal method: use to access a class instance, via self parameter\n",
     "    def get_value(self):\n",
     "        return self.value\n",
     "\n",
-    "    # a class method\n",
+    "    # a class method: use to access its class, via cls parameter\n",
     "    @classmethod\n",
     "    def get_num_instances_created(cls):\n",
     "        return cls.num_instances_created\n",
     "\n",
-    "    # a static method\n",
+    "    # a static method: use to process its arguments\n",
     "    @staticmethod\n",
     "    def x_squared(x):\n",
     "        return x*x\n",
@@ -62,13 +73,6 @@
     "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
     "print('Example.x_squared(10):', Example.x_squared(10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
