--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -25,11 +25,11 @@
    "source": [
     "## Write small, reusable methods\n",
     "### Specified feature: ensure that all ids are unique\n",
-    "The program reads a set of records from a file, and must ensure that all ids in the records are unique. In particular, an errors must report any duplicated ids.\n",
+    "The program reads a set of records from a file, and must ensure that all ids in the records are unique. In particular, an error message must report any duplicated ids.\n",
     "At this point in the code the records have been read and the code has ensured that each record has an id.\n",
     "\n",
     "### Student approach\n",
-    "The student program does ensure that all ids are unique, but is overly complex and long because the duplicate detection is integrated into the data loading method."
+    "The student program does ensure that all ids are unique, but is overly complex and long because the duplicate detection is integrated into the data loading method:"
    ]
   },
   {
@@ -101,10 +101,10 @@
     "            if 1 < subject_ids.count(testid):\n",
     "                for index, value in enumerate(subject_ids):\n",
     "                    if value == testid:\n",
-    "                        dup_id_row.append(index + 2)  # + 2 because 1st row (header) are keys and index is zero-based\n",
+    "                        dup_id_row.append(index + 2)  # + 2 because row 1 contains headers and index is zero-based\n",
     "                        dup_ids.append(value)\n",
-    "        # duplicate detection done\n",
-    "        # dup_ids contains a list of duplicated ids, and dup_id_row contains their corresponding row numbers\n",
+    "        # duplicate detection finished\n",
+    "        # dup_ids is a list of duplicated ids, and dup_id_row has their corresponding row numbers\n",
     "        errors = []\n",
     "        if dup_ids:\n",
     "            for id, row in zip(dup_ids, dup_id_row):\n",
@@ -141,7 +141,7 @@
     "### Problems with this approach\n",
     "1. 8 lines of code perform duplicate detection, which is a specific problem that is distinct from reading in data and could be written in one, generic solution\n",
     "2. If a generic method for duplicate detection were available, it could be used to detect and report duplicates in other software\n",
-    "3. Unnecessarily complex computationally: this approach takes $O(n^{2})$ time, which means that it grows at least as fast as the cube of the number of subjects\n",
+    "3. Unnecessarily complex computationally: this approach takes $O(n^{2})$ time, which means that it grows at least as fast as the square of the number of subjects\n",
     "\n",
     "### Addressing these problems\n",
     "+ Separate the issue of finding duplicates from the issues of reporting them as errors and of determining the rows in which they occur\n",
@@ -272,8 +272,7 @@
     "\n",
     "    @classmethod\n",
     "    def load_file(cls, file_name):\n",
-    "        \"\"\" Load subjects from a tab-separated value file into a list of Subject instances\n",
-    "        \"\"\"\n",
+    "        \"\"\" Load subjects \"\"\"\n",
     "        subjects = []\n",
     "        row_num = 2 # CHANGED\n",
     "        with open(file_name) as csvfile:\n",
