add 'Use Python method types properly'

--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,7 @@
     "\n",
     "### Topics\n",
     "+ Write small, reusable methods\n",
-    "+ \n",
+    "+ Use Python method types properly\n",
     "\n",
     "This notebook contains examples of software problems and their solutions. The examples are taken from student programming assignments written in Python. They have been edited to best illustrate better solution methods."
    ]
@@ -293,12 +292,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final remarks\n",
+    "### Final remarks on \"Write small, reusable methods\"\n",
     "1. Duplicated ids are reported in row order\n",
     "2. We have a reusable duplicate detection method\n",
     "3. We should think about where this method belongs\n",
     "4. Subjects store their row numbers, which may be handy for other purposes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use Python method types properly\n",
+    "### Specified feature: load and validate data from a file into object instances\n",
+    "The program reads a set of records from a file, and loads them into object instances. In particular, each row in the file is loaded into an instance, and must be validated.\n",
+    "\n",
+    "### Principles of Python method types\n",
+    "Python supports three object method types. \n",
+    "1. normal methods\n",
+    "2. class methods\n",
+    "3. static methods\n",
+    "\n",
+    "This section illustrates how they are used and constructed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example.x_squared(10): 100\n",
+      "Example.get_num_instances_created(): 0\n",
+      "example_1.get_value(): hi\n",
+      "Example.get_num_instances_created(): 1\n",
+      "example_2.get_value(): 7\n",
+      "Example.get_num_instances_created(): 2\n",
+      "Example.x_squared(10): 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Example(object):\n",
+    "\n",
+    "    # a class variable\n",
+    "    num_instances_created = 0\n",
+    "\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        Example.num_instances_created += 1\n",
+    "\n",
+    "    # a normal method: use to access a class instance, via self parameter\n",
+    "    def get_value(self):\n",
+    "        return self.value\n",
+    "\n",
+    "    # a class method: use to access its class, via cls parameter\n",
+    "    @classmethod\n",
+    "    def get_num_instances_created(cls):\n",
+    "        return cls.num_instances_created\n",
+    "\n",
+    "    # a static method: use to process its arguments\n",
+    "    @staticmethod\n",
+    "    def x_squared(x):\n",
+    "        return x*x\n",
+    "\n",
+    "print('Example.x_squared(10):', Example.x_squared(10))\n",
+    "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
+    "example_1 = Example('hi')\n",
+    "print('example_1.get_value():', example_1.get_value())\n",
+    "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
+    "example_2 = Example(7)\n",
+    "print('example_2.get_value():', example_2.get_value())\n",
+    "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
+    "print('Example.x_squared(10):', Example.x_squared(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
