add student code example for Python method types

--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -371,6 +371,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Student approach\n",
+    "The student program doesn't make good choices for Python method types. It doesn't run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassificationRun:\n",
+    "    \"\"\" Read, verify and store information about a Classification Run\n",
+    "\n",
+    "    Attributes:\n",
+    "        id (:obj:`str`): a unique identifier for each `ClassificationRun`\n",
+    "        timestamp (:obj:`Date`): date and time the run executed\n",
+    "        subjectIDs (:obj:`list`): IDs of the subject used in the run\n",
+    "        runresult (:obj:`RunResult`): The result of the classification run\n",
+    "    \"\"\"\n",
+    "\n",
+    "    SUBJ_COLS = ['runID', 'timestamp', 'subjectIDs', 'runResults']\n",
+    "    NUM_ATTRIBUTES = 4\n",
+    "\n",
+    "    def __init__(self, id, timestamp, subjectIDs, runresults):\n",
+    "        self.id = id\n",
+    "        stamp = datetime.strptime(timestamp, '%Y-%m-%d %H:%M')\n",
+    "        self.timestamp = stamp\n",
+    "        self.subjectids = list(map(str,ast.literal_eval(subjectIDs)))\n",
+    "        self.runresults = [RunResult[res] for res in ast.literal_eval(runresults)]\n",
+    "\n",
+    "    ## ERROR: verify can be a static method, because it does not refer to the class or an instance\n",
+    "    # change the declaration to:\n",
+    "    # @staticmethod\n",
+    "    # def verify(id, timestamp, subjectIDs, runresults):\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def verify(self, id, timestamp, subjectIDs, runresults):\n",
+    "        \"\"\" Verify the attributes of a `ClassificationRun` instance\n",
+    "\n",
+    "        Args:\n",
+    "            id (:obj:`str`): a unique identifier for each `ClassificationRun`\n",
+    "            timestamp (:obj:`Date`): date and time the run executed\n",
+    "            subjectID (:obj:`str`): ID of the subject used in the run\n",
+    "            runresult (:obj:`RunResult`): The result of the classification run\n",
+    "\n",
+    "        Returns:\n",
+    "            :obj:`list`: detected errors; empty list if none\n",
+    "        \"\"\"\n",
+    "        errors = []\n",
+    "        if not isinstance(id, str):\n",
+    "            errors.append(\"id '{}' is not a str\".format(id))\n",
+    "        elif not len(id):\n",
+    "            errors.append(\"id '{}' is empty\".format(id))\n",
+    "        try:\n",
+    "            re.findall(r'[\\s]', str(id))\n",
+    "        except KeyError:\n",
+    "            errors.append(\"id '{}' contains whitespace\".format(id))\n",
+    "        try:\n",
+    "            [RunResult[res] for res in ast.literal_eval(runresults)]\n",
+    "        except KeyError:\n",
+    "            errors.append(\"Run results '{}' are not a valid results - you may be missing '' around individual results\".format(runresults))\n",
+    "        return errors\n",
+    "\n",
+    "    @classmethod\n",
+    "    def load_file(cls, file_name):\n",
+    "        \"\"\" Loads a tab-delimited file of classification runs and instantiates ClassificationRun instances from the rows\n",
+    "\n",
+    "        Args:\n",
+    "            filename (:obj:`str`): path from cd to file containing subject info\n",
+    "\n",
+    "        Returns:\n",
+    "            :obj:'list': a list of all ClassificationRuns instantiated from the classification run info file\"\"\"\n",
+    "        classificationruns = []\n",
+    "        errors = []\n",
+    "        ids = []\n",
+    "        # start with row num 2 because DictReader uses headers as keys\n",
+    "        row_num = 2\n",
+    "        with open(file_name) as csvfile:\n",
+    "            reader = csv.DictReader(csvfile, delimiter='\\t', restkey='extra_fields')\n",
+    "            for row in reader:\n",
+    "                return_value = cls.load_instance(row)\n",
+    "                if isinstance(return_value, ClassificationRun):\n",
+    "                    classificationruns.append(return_value)\n",
+    "                else:\n",
+    "                    errors.append(\"{}:{} {}\".format(file_name, row_num, '; '.join(return_value)))\n",
+    "                row_num += 1\n",
+    "        if errors:\n",
+    "            sys.stderr.write('\\n'.join(errors))\n",
+    "            sys.stderr.write('\\n')\n",
+    "        return classificationruns\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
