--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Software design guidance, in Python\n",
     "\n",
@@ -20,9 +24,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Write small, reusable methods\n",
+    "Small methods are easier to design than big methods, easier to debug, and easier to test. Reusable methods will save time later.\n",
+    "\n",
     "### Specified feature: ensure that all ids are unique\n",
     "The program reads a set of records from a file, and must ensure that all ids in the records are unique. In particular, an error message must report any duplicated ids.\n",
     "At this point in the code the records have been read and the code has ensured that each record has an id.\n",
@@ -34,7 +44,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     15,
+     48
+    ],
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -135,7 +153,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Problems with this approach\n",
     "1. 8 lines of code perform duplicate detection, which is a specific problem that is distinct from reading in data and could be written in one, generic solution\n",
@@ -153,7 +175,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -216,9 +242,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Benefits of this approach\n",
+    "### Benefits of this improvement\n",
     "1. We wrote a fast, simple, reusable generic method for duplicate detection. It takes $O(n)$ time, which is optimal.\n",
     "2. It takes only 9 lines of code, and is tested a little.\n",
     "\n",
@@ -232,7 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -290,7 +324,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Final remarks on \"Write small, reusable methods\"\n",
     "1. Duplicated ids are reported in row order\n",
@@ -301,25 +339,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Use Python method types properly\n",
-    "### Specified feature: load and validate data from a file into object instances\n",
-    "The program reads a set of records from a file, and loads them into object instances. In particular, each row in the file is loaded into an instance, and must be validated.\n",
-    "\n",
-    "### Principles of Python method types\n",
     "Python supports three object method types. \n",
     "1. normal methods\n",
     "2. class methods\n",
     "3. static methods\n",
     "\n",
-    "This section illustrates how they are used and constructed."
+    "This section illustrates how they are used and constructed.\n",
+    "### Specified feature: load and validate data from a file into object instances\n",
+    "The program reads a set of records from a file, and loads them into object instances. In particular, each row in the file is loaded into an instance, and must be validated."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +416,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Student approach\n",
     "The student program doesn't make good choices for Python method types. It doesn't run."
@@ -381,7 +429,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "class ClassificationRun:\n",
@@ -408,7 +460,6 @@
     "    # change the declaration to:\n",
     "    # @staticmethod\n",
     "    # def verify(id, timestamp, subjectIDs, runresults):\n",
-    "    \n",
     "    @classmethod\n",
     "    def verify(self, id, timestamp, subjectIDs, runresults):\n",
     "        \"\"\" Verify the attributes of a `ClassificationRun` instance\n",
@@ -465,16 +516,10 @@
     "            sys.stderr.write('\\n')\n",
     "        return classificationruns\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -490,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
