--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -18,6 +19,7 @@
     "### Topics\n",
     "+ Write small, reusable methods\n",
     "+ Use Python method types properly\n",
+    "+ Compose classes together\n",
     "\n",
     "This notebook contains examples of software problems and their solutions. The examples are taken from student programming assignments written in Python. They have been edited to best illustrate better solution methods."
    ]
@@ -43,12 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "code_folding": [
-     15,
-     48
-    ],
+    "code_folding": [],
     "slideshow": {
      "slide_type": "slide"
     }
@@ -68,15 +67,15 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.Subject at 0x7fe6046ef390>,\n",
-       " <__main__.Subject at 0x7fe6046ef438>,\n",
-       " <__main__.Subject at 0x7fe6046ef4e0>,\n",
-       " <__main__.Subject at 0x7fe6046ef588>,\n",
-       " <__main__.Subject at 0x7fe6046ef630>,\n",
-       " <__main__.Subject at 0x7fe6046ef6d8>]"
+       "[<__main__.Subject at 0x1082c4160>,\n",
+       " <__main__.Subject at 0x1082c4208>,\n",
+       " <__main__.Subject at 0x1082c42b0>,\n",
+       " <__main__.Subject at 0x1082c4358>,\n",
+       " <__main__.Subject at 0x1082c4400>,\n",
+       " <__main__.Subject at 0x1082c44a8>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,9 +129,9 @@
     "            sys.stderr.write('\\n'.join(errors))\n",
     "        return subjects\n",
     "\n",
-    "def save_test_data(file, data):\n",
-    "    with open(subjects_file, 'w') as file:\n",
-    "        for element in example_data:\n",
+    "def save_test_data(datafile, data):\n",
+    "    with open(datafile, 'w') as file:\n",
+    "        for element in data:\n",
     "            file.write('\\t'.join(element) + '\\n')\n",
     "\n",
     "# create test data\n",
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -185,8 +184,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "id id_6 is duplicated \n",
-      "id id_3 is duplicated "
+      "id id_3 is duplicated \n",
+      "id id_6 is duplicated "
      ]
     }
    ],
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -288,6 +287,11 @@
     "        self.id = id\n",
     "        self.data = data\n",
     "        self._row_num = row_num # CHANGED\n",
+    "    def __str__(self):\n",
+    "        vals = []\n",
+    "        for attr in 'id data _row_num'.split():\n",
+    "            vals.append(\"{}={}\".format(attr, getattr(self, attr)))\n",
+    "        return '; '.join(vals)\n",
     "\n",
     "    @staticmethod\n",
     "    def get_duped_subjects(subjects):\n",
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -516,6 +520,214 @@
     "            sys.stderr.write('\\n')\n",
     "        return classificationruns\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Compose classes together\n",
+    "Composition uses multiple classes in a program, and is an essential approach to building big programs from small components. Class instances can reference each other *directly* via class references.\n",
+    "\n",
+    "This section illustrates composition.\n",
+    "### Specified feature: one class refers to instances of another\n",
+    "A program has *subjects* and *classification runs*. Each classification run has training subjects, and test subjects. \n",
+    "\n",
+    "### Student approach\n",
+    "The student program maintains subject ids in a classification run. To simplify subject access and data analysis these can be converted into references to subjects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "code_folding": [
+     50
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Subject object at 0x10837f588>, <__main__.Subject object at 0x10837f470>, <__main__.Subject object at 0x10837fd68>]\n",
+      "subject id_1\n",
+      "subject id_3\n",
+      "subject id_2\n",
+      "subject unknown\n",
+      "subject \n",
+      "{'id_1': <__main__.Subject object at 0x10837f588>, 'id_2': <__main__.Subject object at 0x10837f470>, 'id_3': <__main__.Subject object at 0x10837fd68>}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "runs.tsv: col 3 id '<built-in function id>' is shorter than min 3\n",
+      "subject i not found in subjects\n",
+      "subject d not found in subjects\n",
+      "subject _ not found in subjects\n",
+      "subject 1 not found in subjects\n",
+      "subject   not found in subjects\n",
+      "subject i not found in subjects\n",
+      "subject d not found in subjects\n",
+      "subject _ not found in subjects\n",
+      "subject 3 not found in subjects\n",
+      "subject i not found in subjects\n",
+      "subject d not found in subjects\n",
+      "subject _ not found in subjects\n",
+      "subject 2 not found in subjects\n",
+      "subject   not found in subjects\n",
+      "subject u not found in subjects\n",
+      "subject n not found in subjects\n",
+      "subject k not found in subjects\n",
+      "subject n not found in subjects\n",
+      "subject o not found in subjects\n",
+      "subject w not found in subjects\n",
+      "subject n not found in subjects\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "class ClassificationRun:\n",
+    "    \"\"\" Read, verify and store information about a classification run\n",
+    "\n",
+    "    Attributes:\n",
+    "        run_id (:obj:`str`): run id\n",
+    "        subject_ids (:obj:`list` of :obj:`Subject`): list of subjects\n",
+    "        # APG: elide other attributes\n",
+    "    \"\"\"\n",
+    "    def __init__(self, run_id, subject_ids):\n",
+    "        self.run_id = run_id\n",
+    "        self.subject_ids = subject_ids\n",
+    "\n",
+    "    @classmethod\n",
+    "    def verify(cls, run_id, subject_ids):\n",
+    "        \"\"\" Verify the attributes of a `Classification Run` instance\n",
+    "\n",
+    "        Args:\n",
+    "            run_id (:obj:`str`): a unique identifier for each classification run\n",
+    "            subject_id (:obj:`list`): list of subject id strings\n",
+    "\n",
+    "        Returns:\n",
+    "            :obj:`list`: detected errors; empty list if none\n",
+    "        \"\"\"\n",
+    "        errors = []\n",
+    "        if not isinstance(run_id, str):\n",
+    "            errors.append(\"col 1 run_id '{}' is not a str\".format(run_id))\n",
+    "        elif len(run_id) < 3:\n",
+    "            errors.append(\"col 1 run_id '{}' is shorter than min {}\".format(id, 3))\n",
+    "        elif re.search(r\"\\s+\", run_id):\n",
+    "            errors.append(\"col 1 run_id '{}' contains white-space\".format(run_id))\n",
+    "\n",
+    "        for subject in subject_ids.split(' '):\n",
+    "            print('subject',subject)\n",
+    "            if not isinstance(subject, str):\n",
+    "                errors.append(\"col 3 id '{}' is not a str\".format(id))\n",
+    "            elif len(subject) < 3:\n",
+    "                errors.append(\"col 3 id '{}' is shorter than min {}\".format(id, 3))\n",
+    "            elif re.search(r\"\\s+\", subject):\n",
+    "                errors.append(\"col 3 id '{}' contains white-space\".format(id))\n",
+    "\n",
+    "        return errors\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        \"\"\" Provide string repr\n",
+    "\n",
+    "        Returns:\n",
+    "            :obj:`str`: tab-separated run_id, number of subjects\n",
+    "        \"\"\"\n",
+    "        return '\\t'.join([self.run_id, 'num of subjects: {}'.format(len(self.subject_ids))])\n",
+    "\n",
+    "    @classmethod\n",
+    "    def load_instance(cls, row):\n",
+    "        \"\"\" Instantiate a `ClassificationRun` instance from `row` or report errors in it\n",
+    "\n",
+    "        Args:\n",
+    "            row (:obj:`OrderedDict`): values in the row, keyed by header values\n",
+    "        \"\"\"\n",
+    "        # check for errors in fields\n",
+    "        args = list(row.values())\n",
+    "        error = ClassificationRun.verify(*args)\n",
+    "        if error:\n",
+    "            return error\n",
+    "        classification = ClassificationRun(*args)\n",
+    "        return classification\n",
+    "\n",
+    "    @classmethod\n",
+    "    def load_file(cls, file_name, subjects):\n",
+    "        \"\"\" Loads classification run from tsv file\n",
+    "\n",
+    "        Args:\n",
+    "            file_name (:obj:'str'): path to the tsv file\n",
+    "            subjects (:obj:'dict'): mapping from subject id to subjects\n",
+    "\n",
+    "        Returns:\n",
+    "            (:obj:'list'): list of ClassificationRuns\n",
+    "        \"\"\"\n",
+    "        classifications = []\n",
+    "        errors = []\n",
+    "        with open(file_name) as csvfile:\n",
+    "            reader = csv.DictReader(csvfile, delimiter='\\t')\n",
+    "            for row in reader:\n",
+    "                return_value = cls.load_instance(row)\n",
+    "                if isinstance(return_value, ClassificationRun):\n",
+    "                    classifications.append(return_value)\n",
+    "                else:\n",
+    "                    errors.append(\"{}: {}\".format(file_name, '; '.join(return_value)))\n",
+    "\n",
+    "        # convert subject_ids to subject references\n",
+    "        subjects_dict = {subject.id: subject for subject in subjects}\n",
+    "        print(subjects_dict)\n",
+    "        for classification in classifications:\n",
+    "            subject_objs = []\n",
+    "            for subject_id in classification.subject_ids:\n",
+    "                if subject_id in subjects_dict:\n",
+    "                    subject_objs.append(subjects_dict[subject_id])\n",
+    "                else:\n",
+    "                    errors.append(\"subject {} not found in subjects\".format(subject_id))\n",
+    "                \n",
+    "        if errors:\n",
+    "            sys.stderr.write('\\n'.join(errors))\n",
+    "            sys.stderr.write('\\n')\n",
+    "        return classifications\n",
+    "\n",
+    "# create test data\n",
+    "example_good_data = [\n",
+    "    ['id', 'data'],\n",
+    "    ['id_1', 'data1'],\n",
+    "    ['id_2', 'data2'],\n",
+    "    ['id_3', 'data3']\n",
+    "]\n",
+    "subjects_file = 'good_subjects.tsv'\n",
+    "save_test_data(subjects_file, example_good_data)\n",
+    "subjects = Subject.load_file(subjects_file)\n",
+    "print(subjects)\n",
+    "\n",
+    "example_runs = [\n",
+    "    ['run_id', 'subject_ids'],\n",
+    "    ['run_id_1', 'id_1 id_3'],\n",
+    "    ['run_id_2', 'id_2 unknown'],\n",
+    "    ['run_id_3', '']\n",
+    "]\n",
+    "runs_file = 'runs.tsv'\n",
+    "save_test_data(runs_file, example_runs)\n",
+    "runs = ClassificationRun.load_file(runs_file, subjects)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
