Update runs so they store references to Subjects

--- a/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
+++ b/examples/fall_2018/week_14/Software design guidance, in Python.ipynb
@@ -47,7 +47,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "code_folding": [],
+    "code_folding": [
+     15,
+     18,
+     41,
+     44,
+     48,
+     54
+    ],
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -57,22 +65,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "5: id id_6 duplicated \n",
+      "6: id id_6 duplicated \n",
       "2: id id_3 duplicated \n",
       "4: id id_3 duplicated \n",
-      "7: id id_3 duplicated \n",
-      "5: id id_6 duplicated \n",
-      "6: id id_6 duplicated "
+      "7: id id_3 duplicated "
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<__main__.Subject at 0x1082c4160>,\n",
-       " <__main__.Subject at 0x1082c4208>,\n",
-       " <__main__.Subject at 0x1082c42b0>,\n",
-       " <__main__.Subject at 0x1082c4358>,\n",
-       " <__main__.Subject at 0x1082c4400>,\n",
-       " <__main__.Subject at 0x1082c44a8>]"
+       "[<__main__.Subject at 0x10b626160>,\n",
+       " <__main__.Subject at 0x10b626208>,\n",
+       " <__main__.Subject at 0x10b6262b0>,\n",
+       " <__main__.Subject at 0x10b626358>,\n",
+       " <__main__.Subject at 0x10b626400>,\n",
+       " <__main__.Subject at 0x10b6264a8>]"
       ]
      },
      "execution_count": 1,
@@ -184,8 +192,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "id id_3 is duplicated \n",
-      "id id_6 is duplicated "
+      "id id_6 is duplicated \n",
+      "id id_3 is duplicated "
      ]
     }
    ],
@@ -355,9 +363,7 @@
     "2. class methods\n",
     "3. static methods\n",
     "\n",
-    "This section illustrates how they are used and constructed.\n",
-    "### Specified feature: load and validate data from a file into object instances\n",
-    "The program reads a set of records from a file, and loads them into object instances. In particular, each row in the file is loaded into an instance, and must be validated."
+    "This section illustrates how they are used and constructed."
    ]
   },
   {
@@ -377,8 +383,10 @@
       "Example.get_num_instances_created(): 0\n",
       "example_1.get_value(): hi\n",
       "Example.get_num_instances_created(): 1\n",
-      "example_2.get_value(): 7\n",
+      "example_2.get_num_instances_created(): 2\n",
       "Example.get_num_instances_created(): 2\n",
+      "example_2.get_value(): 7\n",
+      "Example.get_num_instances_created(): 3\n",
       "Example.x_squared(10): 100\n"
      ]
     }
@@ -413,7 +421,10 @@
     "print('example_1.get_value():', example_1.get_value())\n",
     "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
     "example_2 = Example(7)\n",
+    "print('example_2.get_num_instances_created():', example_2.get_num_instances_created())\n",
+    "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
     "print('example_2.get_value():', example_2.get_value())\n",
+    "Example(8)\n",
     "print('Example.get_num_instances_created():', Example.get_num_instances_created())\n",
     "print('Example.x_squared(10):', Example.x_squared(10))"
    ]
@@ -543,10 +554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
-     50
+     54,
+     119
     ]
    },
    "outputs": [
@@ -554,41 +566,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<__main__.Subject object at 0x10837f588>, <__main__.Subject object at 0x10837f470>, <__main__.Subject object at 0x10837fd68>]\n",
-      "subject id_1\n",
-      "subject id_3\n",
-      "subject id_2\n",
-      "subject unknown\n",
-      "subject \n",
-      "{'id_1': <__main__.Subject object at 0x10837f588>, 'id_2': <__main__.Subject object at 0x10837f470>, 'id_3': <__main__.Subject object at 0x10837fd68>}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "runs.tsv: col 3 id '<built-in function id>' is shorter than min 3\n",
-      "subject i not found in subjects\n",
-      "subject d not found in subjects\n",
-      "subject _ not found in subjects\n",
-      "subject 1 not found in subjects\n",
-      "subject   not found in subjects\n",
-      "subject i not found in subjects\n",
-      "subject d not found in subjects\n",
-      "subject _ not found in subjects\n",
-      "subject 3 not found in subjects\n",
-      "subject i not found in subjects\n",
-      "subject d not found in subjects\n",
-      "subject _ not found in subjects\n",
-      "subject 2 not found in subjects\n",
-      "subject   not found in subjects\n",
-      "subject u not found in subjects\n",
-      "subject n not found in subjects\n",
-      "subject k not found in subjects\n",
-      "subject n not found in subjects\n",
-      "subject o not found in subjects\n",
-      "subject w not found in subjects\n",
-      "subject n not found in subjects\n"
+      "id=id_1; data=data1; _row_num=2\n",
+      "id=id_2; data=data2; _row_num=3\n",
+      "id=id_3; data=data3; _row_num=4\n",
+      "view runs, showing that they store references to Subjects\n",
+      "run_id_1\n",
+      "id_1, id_3\n",
+      "run_id_2\n",
+      "id_2, id_1\n",
+      "run_id_3\n",
+      "id_2\n"
      ]
     }
    ],
@@ -605,7 +592,7 @@
     "    \"\"\"\n",
     "    def __init__(self, run_id, subject_ids):\n",
     "        self.run_id = run_id\n",
-    "        self.subject_ids = subject_ids\n",
+    "        self.subject_ids = subject_ids.split(' ')\n",
     "\n",
     "    @classmethod\n",
     "    def verify(cls, run_id, subject_ids):\n",
@@ -622,18 +609,17 @@
     "        if not isinstance(run_id, str):\n",
     "            errors.append(\"col 1 run_id '{}' is not a str\".format(run_id))\n",
     "        elif len(run_id) < 3:\n",
-    "            errors.append(\"col 1 run_id '{}' is shorter than min {}\".format(id, 3))\n",
+    "            errors.append(\"col 1 run_id '{}' is shorter than min {}\".format(run_id, 3))\n",
     "        elif re.search(r\"\\s+\", run_id):\n",
     "            errors.append(\"col 1 run_id '{}' contains white-space\".format(run_id))\n",
     "\n",
-    "        for subject in subject_ids.split(' '):\n",
-    "            print('subject',subject)\n",
-    "            if not isinstance(subject, str):\n",
-    "                errors.append(\"col 3 id '{}' is not a str\".format(id))\n",
-    "            elif len(subject) < 3:\n",
-    "                errors.append(\"col 3 id '{}' is shorter than min {}\".format(id, 3))\n",
-    "            elif re.search(r\"\\s+\", subject):\n",
-    "                errors.append(\"col 3 id '{}' contains white-space\".format(id))\n",
+    "        for subject_id in subject_ids.split(' '):\n",
+    "            if not isinstance(subject_id, str):\n",
+    "                errors.append(\"col 3 subject_id '{}' is not a str\".format(subject_id))\n",
+    "            elif len(subject_id) < 3:\n",
+    "                errors.append(\"col 3 subject_id '{}' is shorter than min {}\".format(subject_id, 3))\n",
+    "            elif re.search(r\"\\s+\", subject_id):\n",
+    "                errors.append(\"col 3 subject_id '{}' contains white-space\".format(subject_id))\n",
     "\n",
     "        return errors\n",
     "\n",
@@ -641,9 +627,12 @@
     "        \"\"\" Provide string repr\n",
     "\n",
     "        Returns:\n",
-    "            :obj:`str`: tab-separated run_id, number of subjects\n",
+    "            :obj:`str`: two lines: run_id, ids of subjects\n",
     "        \"\"\"\n",
-    "        return '\\t'.join([self.run_id, 'num of subjects: {}'.format(len(self.subject_ids))])\n",
+    "        rv = \"{}\\n\".format(self.run_id)\n",
+    "        ### IMPORTANT POINT: access subject ids through Subject instances\n",
+    "        rv += ', '.join([subject.id for subject in self.subjects])\n",
+    "        return rv\n",
     "\n",
     "    @classmethod\n",
     "    def load_instance(cls, row):\n",
@@ -682,9 +671,8 @@
     "                else:\n",
     "                    errors.append(\"{}: {}\".format(file_name, '; '.join(return_value)))\n",
     "\n",
-    "        # convert subject_ids to subject references\n",
+    "        # IMPORTANT POINT: convert subject_ids to subject references\n",
     "        subjects_dict = {subject.id: subject for subject in subjects}\n",
-    "        print(subjects_dict)\n",
     "        for classification in classifications:\n",
     "            subject_objs = []\n",
     "            for subject_id in classification.subject_ids:\n",
@@ -692,7 +680,8 @@
     "                    subject_objs.append(subjects_dict[subject_id])\n",
     "                else:\n",
     "                    errors.append(\"subject {} not found in subjects\".format(subject_id))\n",
-    "                \n",
+    "            classification.subjects = subject_objs\n",
+    "\n",
     "        if errors:\n",
     "            sys.stderr.write('\\n'.join(errors))\n",
     "            sys.stderr.write('\\n')\n",
@@ -708,26 +697,22 @@
     "subjects_file = 'good_subjects.tsv'\n",
     "save_test_data(subjects_file, example_good_data)\n",
     "subjects = Subject.load_file(subjects_file)\n",
-    "print(subjects)\n",
+    "for s in subjects:\n",
+    "    print(s)\n",
     "\n",
     "example_runs = [\n",
     "    ['run_id', 'subject_ids'],\n",
     "    ['run_id_1', 'id_1 id_3'],\n",
-    "    ['run_id_2', 'id_2 unknown'],\n",
-    "    ['run_id_3', '']\n",
+    "    ['run_id_2', 'id_2 id_1'],\n",
+    "    ['run_id_3', 'id_2']\n",
     "]\n",
     "runs_file = 'runs.tsv'\n",
     "save_test_data(runs_file, example_runs)\n",
     "runs = ClassificationRun.load_file(runs_file, subjects)\n",
-    "\n"
+    "print('view runs, showing that they store references to Subjects')\n",
+    "for run in runs:\n",
+    "    print(run)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
